Create Connection string with database for Setup Entity Framework

--- a/steps_API/appsettings.json
+++ b/steps_API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "stepsDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=stepsDb;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
