Implement JWT Authentication in appsetting.json & program.cs file

--- a/steps_API/appsettings.json
+++ b/steps_API/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "stepsDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=stepsDb;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
+  "JwtSettings": {
+    "Issuer": "stepsAPI",
+    "Audience": "stepsApiClient",
+    "DurationInMinutes": 10,
+    "Key": "YourSuperSecretKey"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
